kubernetes/auth_conf/requesAuth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: kubeflow-request-authentication
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
    - issuer: "https://keycloak.apps.emeralds.ari-aidata.eu/auth/realms/emeralds"
      jwksUri: "https://keycloak.apps.emeralds.ari-aidata.eu/auth/realms/emeralds/protocol/openid-connect/certs"
